#
# $Id: Makefile.am,v 1.1 2002/05/13 15:44:57 valignat Exp $
#

MAINTAINERCLEANFILES = Makefile.in

DIST_SUBDIRS         = build_coarse_mesh                   \
                       build_far_bank                      \
                       build_smallbank                     \
                       ig_lighter_lib                      \
                       ig_lighter                          \
                       panoply_maker                       \
                       zone_lib                            \
                       zone_dependencies                   \
                       zone_ig_lighter                     \
                       zone_lighter                        \
                       zone_welder

SUBDIRS              = build_coarse_mesh                   \
                       build_far_bank                      \
                       build_smallbank                     \
                       ig_lighter_lib                      \
                       ig_lighter                          \
                       panoply_maker                       \
                       zone_lib                            \
                       zone_dependencies                   \
                       zone_ig_lighter                     \
                       zone_lighter                        \
                       zone_welder


# End of Makefile.am

