#
# $Id: Makefile.am,v 1.1 2001/06/13 18:05:00 valignat Exp $
#

MAINTAINERCLEANFILES = Makefile.in

SUBDIRS              = agent     \
                       c         \
		       character \
		       e         \
		       fuzzy     \
		       logic     \
		       nimat     \
		       pyserver  \
                       script    \
		       tools

includedir           = ${prefix}/include/nel/ai

include_HEADERS      = $(wildcard *.h)


# End of Makefile.am
