#
# $Id: Makefile.am,v 1.15 2001/03/15 17:44:42 valignat Exp $
#

MAINTAINERCLEANFILES    = Makefile.in

noinst_LTLIBRARIES      = libagent.la

libagent_la_SOURCES     = actor.cpp actor_script.cpp agent_input.cpp \
                          agent_local_mailer.cpp agent_nombre.cpp \
                          agent_object.cpp agent_operator.cpp \
                          agent_proxy_mailer.cpp agent_script.cpp \
                          agent_string.cpp agents.cpp baseai.cpp \
                          basic_agent.cpp digital.cpp gd_agent_script.cpp \
                          group_type.cpp ident.cpp init_agent.cpp \
                          list_manager.cpp mailbox.cpp main_agent_script.cpp \
                          message_script.cpp msg.cpp msg_action.cpp \
                          msg_container.cpp msg_debug.cpp msg_fact.cpp \
                          msg_goal.cpp msg_group.cpp msg_notify.cpp \
                          msg_on_change.cpp paire_type.cpp


# End of Makefile.am

