#
# $Id: Makefile.am,v 1.26 2002/05/27 09:23:03 chafik Exp $
#

MAINTAINERCLEANFILES    = Makefile.in

noinst_LTLIBRARIES      = libagent.la

libagent_la_SOURCES     = baseai.cpp \
                          agents.cpp \
                          msg.cpp \
                          mailbox.cpp \
                          agent_3dvector.cpp \
                          agent_input.cpp \
                          basic_agent.cpp \
                          agent_proxy_mailer.cpp \
                          group_type.cpp \
                          goal_stack.cpp \
                          agent_operator.cpp \
                          main_agent_script.cpp \
                          actor_script.cpp \
                          agent_string.cpp \
                          agent_script.cpp \
                          agent_timer.cpp \
                          ident.cpp \
                          init_agent.cpp \
                          msg_container.cpp \
                          msg_debug.cpp \
                          msg_group.cpp \
                          msg_notify.cpp \
                          msg_getvalue.cpp \
						  msg_setvalue.cpp \
						  msg_connect.cpp \
                          msg_on_change.cpp \
                          paire_type.cpp \
                          agent_local_mailer.cpp \
                          agent_nombre.cpp \
						  operation.cpp \
                          list_manager.cpp \
                          volatil_memory.cpp \
                          digital.cpp \
                          msg_action.cpp \
                          msg_goal.cpp \
                          msg_fact.cpp \
                          message_script.cpp \
                          msg_stream.cpp \
                          agent_object.cpp

# End of Makefile.am

