#
# $Id: Makefile.am,v 1.28 2004/01/15 17:34:09 lecroart Exp $
#

MAINTAINERCLEANFILES    = Makefile.in

noinst_LTLIBRARIES      = libagent.la

libagent_la_SOURCES     = 	actor_script.cpp \
							agent_3dvector.cpp \
							agent_input.cpp \
							agent_local_mailer.cpp \
							agent_nombre.cpp \
							agent_object.cpp \
							agent_operator.cpp \
							agent_proxy_mailer.cpp \
							agent_script.cpp \
							agent_string.cpp \
							agent_timer.cpp \
							agents.cpp \
							baseai.cpp \
							basic_agent.cpp \
							digital.cpp \
							group_type.cpp \
							ident.cpp \
							init_agent.cpp \
							list_manager.cpp \
							mailbox.cpp \
							main_agent_script.cpp \
							message_script.cpp \
							msg.cpp \
							msg_action.cpp \
							msg_fact.cpp \
							msg_getvalue.cpp \
							msg_goal.cpp \
							msg_group.cpp \
							msg_notify.cpp \
							msg_on_change.cpp \
							msg_setvalue.cpp \
							msg_stream.cpp \
							operation.cpp \
							paire_type.cpp \
							volatil_memory.cpp

# End of Makefile.am

