#
# $Id: Makefile.am,v 1.2 2001/10/04 09:56:10 chafik Exp $
#

MAINTAINERCLEANFILES    = Makefile.in

noinst_LTLIBRARIES      = libcommon.la

libcommon_la_SOURCES    = registry_class.cpp \
                          registry_type.cpp \
                          ident_type.cpp \
                          registry.cpp


# End of Makefile.am

