#
# $Id: Makefile.am,v 1.3 2002/10/07 10:14:40 coutelas Exp $
#

MAINTAINERCLEANFILES    = Makefile.in

noinst_LTLIBRARIES      = libcommon.la

libcommon_la_SOURCES    = ident_type.cpp \
						  registry.cpp \
						  registry_class.cpp \
                          registry_type.cpp


# End of Makefile.am

