#
# $Id: Makefile.am,v 1.3 2001/10/04 09:56:10 chafik Exp $
#

MAINTAINERCLEANFILES    = Makefile.in

noinst_LTLIBRARIES      = libfuzzy.la

libfuzzy_la_SOURCES     = fuzzy_script.cpp \
                          fuzzycond.cpp \
                          fuzzyfact.cpp \
                          fuzzyrule.cpp \
                          fuzzyruleset.cpp \
                          fuzzytype.cpp \
                          fuzzyvar.cpp \
                          interpret_fuzzy_controler.cpp \
                          fuzzyset.cpp


# End of Makefile.am

