#
# $Id: Makefile.am,v 1.4 2002/10/07 10:14:40 coutelas Exp $
#

MAINTAINERCLEANFILES    = Makefile.in

noinst_LTLIBRARIES      = libfuzzy.la

libfuzzy_la_SOURCES     = fuzzy_script.cpp \
                          fuzzycond.cpp \
                          fuzzyfact.cpp \
                          fuzzyrule.cpp \
                          fuzzyruleset.cpp \
                          fuzzytype.cpp \
                          fuzzyvar.cpp \
                          interpret_fuzzy_controler.cpp


# End of Makefile.am

