#
# $Id: Makefile.am,v 1.5 2002/10/10 13:22:56 coutelas Exp $
#

MAINTAINERCLEANFILES    = Makefile.in

noinst_LTLIBRARIES      = libfuzzy.la

libfuzzy_la_SOURCES     = fuzzy_script.cpp \
                          fuzzycond.cpp \
                          fuzzyfact.cpp \
                          fuzzyrule.cpp \
                          fuzzyruleset.cpp \
			  fuzzyset.cpp \
                          fuzzytype.cpp \
                          fuzzyvar.cpp \
                          interpret_fuzzy_controler.cpp


# End of Makefile.am

