#
# $Id: Makefile.am,v 1.6 2001/03/29 12:00:00 chafik Exp $
#

MAINTAINERCLEANFILES    = Makefile.in

noinst_LTLIBRARIES      = liblogic.la

liblogic_la_SOURCES     = ai_assert.cpp bool_assert.cpp bool_cond.cpp \
                          bool_operator.cpp boolval.cpp clause.cpp \
                          fact.cpp factbase.cpp fo_assert.cpp \
                          fo_operator.cpp interpret_object_operator.cpp \
                          operator.cpp operator_script.cpp rule.cpp  fsm_seq.cpp fsm_script.cpp \
                          valueset.cpp var.cpp varset.cpp goal.cpp


# End of Makefile.am

