#
# $Id: Makefile.am,v 1.8 2001/10/04 09:56:10 chafik Exp $
#

MAINTAINERCLEANFILES    = Makefile.in

noinst_LTLIBRARIES      = liblogic.la

liblogic_la_SOURCES     = ai_assert.cpp \
                          bool_assert.cpp \
                          bool_cond.cpp \
                          bool_operator.cpp \
                          fsm_seq_script.cpp \
                          operator.cpp \
                          var_mem.cpp \
                          varset.cpp \
                          var.cpp \
                          clause.cpp \
                          fo_assert.cpp \
                          fo_operator.cpp \
                          rule.cpp \
                          valueset.cpp \
                          fsm_script.cpp \
                          fact.cpp \
                          factbase.cpp \
                          boolval.cpp \
                          interpret_object_operator.cpp \
                          goal.cpp \
                          operator_script.cpp


# End of Makefile.am

