#
# $Id: Makefile.am,v 1.9 2002/10/07 10:14:40 coutelas Exp $
#

MAINTAINERCLEANFILES    = Makefile.in

noinst_LTLIBRARIES      = liblogic.la

liblogic_la_SOURCES     = ai_assert.cpp \
                          bool_assert.cpp \
                          bool_cond.cpp \
                          bool_operator.cpp \
						  boolval.cpp \
						  clause.cpp \
						  fact.cpp \
						  factbase.cpp \
						  fo_assert.cpp \
                          fo_operator.cpp \
                          fsm_script.cpp \
                          fsm_seq_script.cpp \
                          goal.cpp \
						  goal_path.cpp \
						  goal_stack.cpp \
						  interpret_object_operator.cpp \
						  operator.cpp \
                          operator_script.cpp \
						  rule.cpp \
						  valueset.cpp \
						  var.cpp \
                          var_mem.cpp \
                          varset.cpp


# End of Makefile.am

