#
# $Id: Makefile.am,v 1.4 2001/03/15 19:33:01 valignat Exp $
#

MAINTAINERCLEANFILES    = Makefile.in

AM_CXXFLAGS             = @PYTHON_CFLAGS@

noinst_LTLIBRARIES      = libpyserver.la

libpyserver_la_SOURCES  = pylib.cpp pythonmethode.cpp

libpyserver_la_LIBADD   = @PYTHON_LIBS@


# End of Makefile.am

