#
# $Id: Makefile.am,v 1.5 2001/10/04 09:56:10 chafik Exp $
#

MAINTAINERCLEANFILES    = Makefile.in

AM_CXXFLAGS             = @PYTHON_CFLAGS@

noinst_LTLIBRARIES      = libpyserver.la

libpyserver_la_SOURCES  = pylib.cpp \
                          pythonmethode.cpp

libpyserver_la_LIBADD   = @PYTHON_LIBS@


# End of Makefile.am

