#
# $Id: Makefile.am,v 1.14 2002/03/11 10:20:20 portier Exp $
#

MAINTAINERCLEANFILES    = Makefile.in

noinst_LTLIBRARIES      = libscript.la

libscript_la_SOURCES    = constraint.cpp \
                          constraint_debug.cpp \
                          constraint_find_run.cpp \
                          constraint_type.cpp \
                          context_debug.cpp \
                          factor_type.cpp \
                          hierarchy.cpp \
                          init.cpp \
                          interpret_actor.cpp \
                          interpret_methodes.cpp \
                          interpret_object_manager.cpp \
                          interpret_object_operator.cpp \
                          lexlang.cpp \
                          module.cpp \
                          objects_load.cpp \
                          opcode_call_method.cpp \
                          opcode_ldb.cpp \
                          opcode_lpt.cpp \
                          opcode_register.cpp \
                          script_debug_source.cpp \
                          type_def.cpp \
                          interpret_message_action.cpp \
                          interpret_object.cpp \
                          interpret_fsm.cpp \
                          var_control.cpp \
                          constraint_stack_component.cpp \
                          lexsupport.cpp \
                          interpret_object_message.cpp \
						  interpret_message_setvalue.cpp \
						  interpret_message_connect.cpp \
                          opcode.cpp \
                          yacc.cpp \
                          opcode_call_lib_method.cpp \
                          ytable.cpp \
                          compilateur.cpp \
                          test_method.cpp \
                          interpret_object_agent.cpp \
                          codage.cpp \
                          code_branche_run_debug.cpp \
                          libcode.cpp \
                          param_container.cpp \
                          interpret_message_getvalue.cpp

# End of Makefile.am

