#
# $Id: Makefile.am,v 1.16 2004/01/15 17:34:09 lecroart Exp $
#

MAINTAINERCLEANFILES    = Makefile.in

noinst_LTLIBRARIES      = libscript.la

libscript_la_SOURCES    =	codage.cpp \
							code_branche_run_debug.cpp \
							compilateur.cpp \
							constraint.cpp \
							constraint_debug.cpp \
							constraint_find_run.cpp \
							constraint_stack_component.cpp \
							constraint_type.cpp \
							context_debug.cpp \
							factor_type.cpp \
							hierarchy.cpp \
							init.cpp \
							interpret_actor.cpp \
							interpret_fsm.cpp \
							interpret_message_action.cpp \
							interpret_message_getvalue.cpp \
							interpret_message_setvalue.cpp \
							interpret_methodes.cpp \
							interpret_object.cpp \
							interpret_object_agent.cpp \
							interpret_object_manager.cpp \
							interpret_object_message.cpp \
							lexlang.cpp \
							lexsupport.cpp \
							libcode.cpp \
							module.cpp \
							objects_load.cpp \
							opcode.cpp \
							opcode_call_lib_method.cpp \
							opcode_call_method.cpp \
							opcode_ldb.cpp \
							opcode_register.cpp \
							param_container.cpp \
							script_debug_source.cpp \
							test_method.cpp \
							type_def.cpp \
							var_control.cpp \
							yacc.cpp \
							ytable.cpp

# End of Makefile.am

